@@ -56,10 +56,10 @@ GC_TUNE="-XX:NewRatio=3 \
 # By default the start script uses UTC; override the timezone if needed
 #SOLR_TIMEZONE="UTC"
 
-# By default the start script enables some RMI related parameters to allow attaching
-# JMX savvy tools like VisualVM remotely, set to "false" to disable that behavior
-# (recommended in production environments)
-ENABLE_REMOTE_JMX_OPTS="true"
+# Set to true to activate the JMX RMI connector to allow remote JMX client applications
+# to monitor the JVM hosting Solr; set to "false" to disable that behavior
+# (false is recommended in production environments)
+ENABLE_REMOTE_JMX_OPTS="false"
 
 # The script will use SOLR_PORT+10000 for the RMI_PORT or you can set it here
 # RMI_PORT=18983
