@@ -442,6 +442,9 @@ Other Changes
   the example directory instead of server/solr. (Alexandre Rafalovitch, Anshum Gupta, hossman,
   Timothy Potter)
 
+* SOLR-6843: JMX RMI connector should be disabled by default but can be activated by
+  setting ENABLE_REMOTE_JMX_OPTS to true in solr.in.(sh|cmd). (Timothy Potter)
+
 ==================  4.10.3 ==================
 
 Bug Fixes
